--- a/my_list.html
+++ b/my_list.html
@@ -2,7 +2,7 @@
 <p>Some body parts that make up a human being:</p>
 
 <ul>
-  <li>"butts"</li>
+  <li>"butt"</li>
   <li>"arms"</li>
   <li>"legs"</li>
   <li>"torso"</li>
